footer carousel image clipping fix

--- a/resources/twuae/scss/2_components/_footer.scss
+++ b/resources/twuae/scss/2_components/_footer.scss
@@ -292,5 +292,9 @@ $footerLegalLinksHoverColor: $red1;
         height: 100%;
         min-height: 35px;
         width: 100%;
+
+        @media (max-width: 430px) {
+            background-size: 86px auto !important;
+        }
     }
 }
